--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,3 @@
-# Copyright (c) IBM Corporation
-# SPDX-License-Identifier: Apache-2.0
-
 # Visit https://goreleaser.com for documentation on how to customize this
 # behavior.
 version: 2
@@ -20,11 +17,18 @@ builds:
   ldflags:
     - '-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}'
   goos:
+    - freebsd
+    - windows
     - linux
     - darwin
   goarch:
     - amd64
+    - '386'
+    - arm
     - arm64
+  ignore:
+    - goos: darwin
+      goarch: '386'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
 - format: zip
@@ -35,6 +39,18 @@ checksum:
       name_template: '{{ .ProjectName }}_{{ .Version }}_manifest.json'
   name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
   algorithm: sha256
+signs:
+  - artifacts: checksum
+    args:
+      # if you are using this in a GitHub action or some other automated pipeline, you 
+      # need to pass the batch flag to indicate its not interactive.
+      - "--batch"
+      - "--local-user"
+      - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
+      - "--output"
+      - "${signature}"
+      - "--detach-sign"
+      - "${artifact}"
 release:
   extra_files:
     - glob: 'terraform-registry-manifest.json'
